@@ -959,9 +959,14 @@ class phodevi_system extends phodevi_device_interface
 		{
 			$os_version = phodevi_linux_parser::read_lsb('Release');
 
-			if($os_version == null && is_readable('/etc/os-release'))
+			if($os_version == null)
 			{
-				$os_release = parse_ini_file('/etc/os-release');
+				if(is_readable('/etc/os-release'))
+					$os_release = parse_ini_file('/etc/os-release');
+				else if(is_readable('/usr/lib/os-release'))
+					$os_release = parse_ini_file('/usr/lib/os-release');
+				else
+					$os_release = null;
 
 				if(isset($os_release['VERSION_ID']) && !empty($os_release['VERSION_ID']))
 				{
@@ -1012,6 +1017,13 @@ class phodevi_system extends phodevi_device_interface
 					$vendor = $os_release['NAME'];
 				}
 			}
+
+			if(($x = stripos($vendor, ' for ')) !== false)
+			{
+				$vendor = substr($vendor, 0, $x);
+			}
+
+			$vendor = str_replace(array('Software'), null, $vendor);
 		}
 		else if(phodevi::is_hurd())
 		{
