@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- phodevi: Software string detection improvements
+
 Phoronix Test Suite 6.2 Milestone 1
 15 December 2015
 
